--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "gitlab",
   "version": "0.4.1",
-  "description": "gitlab api nodejs library",
+  "description": "GitLab API Nodejs library.",
   "main": "index.js",
   "directories": {
     "example": "examples",
@@ -9,12 +9,14 @@
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
+    ,"install": "./node_modules/coffee-script/bin/cake build"
   },
   "repository": {
     "type": "git",
     "url": "https://github.com/moul/node-gitlab"
   },
   "dependencies": {
+    "coffee-script": "*"
   },
   "devDependencies": {
   },
@@ -32,6 +34,10 @@
     {
       "name": "Dave Irvine",
       "url": "https://github.com/dave-irvine"
+    },
+    {
+      "name": "Glavin Wiechert",
+      "url": "https://github.com/Glavin001"
     }
   ],
   "license": "MIT",
