--- a/package.json
+++ b/package.json
@@ -2,32 +2,29 @@
   "name": "gitlab",
   "version": "0.4.1",
   "description": "GitLab API Nodejs library.",
-  "main": "index.js",
+  "main": "lib/index.js",
   "directories": {
     "example": "examples",
     "test": "test"
   },
   "scripts": {
-    "test": "./node_modules/mocha/bin/mocha tests"
-    ,"install": "./node_modules/coffee-script/bin/cake build"
+    "test": "./node_modules/mocha/bin/mocha tests",
+    "build": "./node_modules/coffee-script/bin/cake build"
   },
   "repository": {
     "type": "git",
     "url": "https://github.com/moul/node-gitlab"
   },
   "dependencies": {
-    "coffee-script": "*"
   },
   "devDependencies": {
+    "coffee-script": "*",
     "mocha": ""
   },
   "keywords": [
     "gitlab",
     "git",
     "api",
-    "npm",
-    "coffee",
-    "javascript",
     "request"
   ],
   "author": "Manfred Touron <m@42.am>",
