switched to 'debug' node module

--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "url": "https://github.com/moul/node-gitlab"
   },
   "dependencies": {
+    "debug": "*"
   },
   "devDependencies": {
     "coffee-script": "*",
