Make .npmignore match .gitignore

--- a/.npmignore
+++ b/.npmignore
@@ -1,1 +1,23 @@
 ./src/
+.DS_Store
+NOTES
+*~
+*#
+.#*
+node_modules
+examples/credentials*
+
+lib-cov
+*.seed
+*.log
+*.csv
+*.dat
+*.out
+*.pid
+*.gz
+
+pids
+logs
+results
+
+npm-debug.log
