--- a/.travis.yml
+++ b/.travis.yml
@@ -3,3 +3,10 @@ node_js:
   - "0.11"
   - "0.10"
   - "0.8"
+notifications:
+  webhooks:
+    urls:
+      - https://webhooks.gitter.im/e/6f1f69c4ed2fc4bdfeff
+    on_success: change  # options: [always|never|change] default: always
+    on_failure: always  # options: [always|never|change] default: always
+    on_start: false     # default: false
