--- a/package.json
+++ b/package.json
@@ -34,14 +34,18 @@
     {
       "name": "Dave Irvine",
       "url": "https://github.com/dave-irvine"
-    },
-    {
+    }, {
       "name": "Glavin Wiechert",
       "url": "https://github.com/Glavin001"
-    },
-    {
+    }, {
       "name": "Florian Quiblier",
       "url": "https://github.com/fofoy"
+    }, {
+      "name": "Anthony Heber",
+      "url": "https://github.com/aheber"
+    }, {
+      "name": "Evan Heidtmann",
+      "url": "https://github.com/ezheidtmann"
     }
   ],
   "license": "MIT",
