Added luoqpolyvi to contributors

--- a/package.json
+++ b/package.json
@@ -46,6 +46,9 @@
     }, {
       "name": "Evan Heidtmann",
       "url": "https://github.com/ezheidtmann"
+    }, {
+      "name": "luoqpolyvi",
+      "url": "https://github.com/luoqpolyvi"
     }
   ],
   "license": "MIT",
