Add bin. Add cmd “-v”.

--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
   },
   "dependencies": {
     "debug": "*",
-    "slumber": "0.4.1"
+    "slumber": "0.4.1",
+    "commander": "latest"
   },
   "devDependencies": {
     "coffee-script": "*",
@@ -49,8 +50,14 @@
     }, {
       "name": "luoqpolyvi",
       "url": "https://github.com/luoqpolyvi"
+    }, {
+      "name": "mdsb100",
+      "url": "https://github.com/mdsb100"
     }
   ],
+  "bin": {
+    "gitlab": "gitlab.js"
+  },
   "license": "MIT",
   "readmeFilename": "README.md"
 }
