Fix node env. Refer to 'https://github.com/js2coffee/js2coffee/blob/master/src/documents/bin/js2coffee'

--- a/package.json
+++ b/package.json
@@ -58,7 +58,7 @@
     }
   ],
   "bin": {
-    "gitlab": "bin/gitlab.js"
+    "gitlab": "bin/gitlab"
   },
   "license": "MIT",
   "readmeFilename": "README.md"
