Begin test refactoring.
- Added Proxyquire and Chai testing libraries
- Removed all old tests
- 100% code coverage of Utils!

--- a/package.json
+++ b/package.json
@@ -21,7 +21,9 @@
   },
   "devDependencies": {
     "coffee-script": "*",
-    "mocha": ""
+    "mocha": "",
+    "proxyquire": "~1.0.1",
+    "chai": "~1.9.2"
   },
   "keywords": [
     "gitlab",
