Updated contributors list.

--- a/package.json
+++ b/package.json
@@ -36,21 +36,54 @@
     {
       "name": "Dave Irvine",
       "url": "https://github.com/dave-irvine"
-    }, {
+    },
+    {
       "name": "Glavin Wiechert",
       "url": "https://github.com/Glavin001"
-    }, {
+    },
+    {
       "name": "Florian Quiblier",
       "url": "https://github.com/fofoy"
-    }, {
+    },
+    {
       "name": "Anthony Heber",
       "url": "https://github.com/aheber"
-    }, {
+    },
+    {
       "name": "Evan Heidtmann",
       "url": "https://github.com/ezheidtmann"
-    }, {
+    },
+    {
       "name": "luoqpolyvi",
       "url": "https://github.com/luoqpolyvi"
+    },
+    {
+      "name": "Brian Vanderbusch",
+      "url": "https://github.com/LongLiveCHIEF"
+    },
+    {
+      "name": "daprahamian",
+      "url": "https://github.com/daprahamian"
+    },
+    {
+      "name": "pgorecki",
+      "url": "https://github.com/pgorecki"
+    },
+    {
+      "name": "CaoJun",
+      "url": "https://github.com/mdsb100"
+    },
+    {
+      "name": "nalabjp",
+      "url": "https://github.com/nalabjp"
+    },
+    {
+      "name": "shaoshuai0102",
+      "url": "https://github.com/shaoshuai0102"
+    },
+    {
+      "name": "Sakesan Panjamawat",
+      "url": "https://github.com/sakp"
     }
   ],
   "license": "MIT",
