--- a/package.json
+++ b/package.json
@@ -23,7 +23,9 @@
     "coffee-script": "*",
     "mocha": "",
     "proxyquire": "~1.0.1",
-    "chai": "~1.9.2"
+    "chai": "~1.9.2",
+    "sinon": "~1.10.3",
+    "sinon-chai": "~2.6.0"
   },
   "keywords": [
     "gitlab",
