Fixed 'make doc'

--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
   },
   "devDependencies": {
     "coffee-script": "*",
-    "mocha": ""
+    "mocha": "",
+    "docco": ""
   },
   "keywords": [
     "gitlab",
