Removed docco from dependencies (broke tests on node 0.8)

--- a/package.json
+++ b/package.json
@@ -21,8 +21,7 @@
   },
   "devDependencies": {
     "coffee-script": "*",
-    "mocha": "",
-    "docco": ""
+    "mocha": ""
   },
   "keywords": [
     "gitlab",
