--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/moul/node-gitlab"
+    "url": "https://github.com/node-gitlab/node-gitlab"
   },
   "dependencies": {
     "debug": "*",
