--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
   },
   "dependencies": {
     "debug": "*",
-    "slumber": "0.4.1"
+    "slumber": ">=0.5.0"
   },
   "devDependencies": {
     "coffee-script": "*",
