--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "gitlab",
-  "version": "1.5.0+",
+  "version": "1.5.1",
   "description": "GitLab API Nodejs library.",
   "main": "lib/index.js",
   "directories": {
