--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
   },
   "dependencies": {
     "debug": "*",
-    "slumber": ">=0.7.0"
+    "slumber": "0.9.0"
   },
   "devDependencies": {
     "coffee-script": ">=1.9.1",
