--- a/.travis.yml
+++ b/.travis.yml
@@ -1,8 +1,8 @@
 language: node_js
 node_js:
-  - "0.12"
-  - "0.11"
-  - "0.10"
+  - "lts/boron"
+  - "lts/carbon"
+  - "stable"
 sudo: false
 notifications:
   webhooks:
