--- a/.travis.yml
+++ b/.travis.yml
@@ -4,6 +4,8 @@ node_js:
   - "lts/carbon"
   - "stable"
 sudo: false
+before_install: npm install -g npm@latest
+install: npm ci
 notifications:
   webhooks:
     urls:
